many comp added

--- a/src/app/adminboard/adminboard.component.html
+++ b/src/app/adminboard/adminboard.component.html
@@ -123,14 +123,22 @@
                   Diagonosis
                 </mat-expansion-panel-header>
                 <mat-nav-list>
-                    <a mat-list-item routerLink="/admin/diagonosis">
+                    <a mat-list-item routerLink="/admin/pathology">
                         <mat-icon>groups</mat-icon>
-                        <span>Diagonosis List</span>
+                        <span>Pathology</span>
                     </a>
-                    <a mat-list-item routerLink="/admin/creatediagonosis">
+                    <a mat-list-item routerLink="/admin/pathology_type">
+                        <mat-icon>groups</mat-icon>
+                        <span>Pathology Category</span>
+                    </a>
+                    <a mat-list-item routerLink="/admin/operation">
+                        <mat-icon>groups</mat-icon>
+                        <span>Operation</span>
+                    </a>
+                    <!-- <a mat-list-item routerLink="/admin/creatediagonosis">
                         <mat-icon>android</mat-icon>
                         <span>New Diagonosis</span>
-                    </a>
+                    </a> -->
                    
                 </mat-nav-list>
             </mat-expansion-panel>
