--- a/src/app/adminboard/cabin/cabin.component.html
+++ b/src/app/adminboard/cabin/cabin.component.html
@@ -13,83 +13,80 @@
   
   
   <div class="container">
-    <h3 class="text-center">Create New Allotment</h3>
+    <div class="heading bg-info">
+      <h3 class="text-light text-center p-2">New Cabin Allotment</h3>
+    </div>
   
   
-    <form  class="form" role="form" autocomplete="off" id="formLogin" novalidate=""
+    <form [formGroup]="allotmentForm"  class="form" role="form" autocomplete="off" id="formLogin" novalidate=""
       method="POST">
      
   
       <div class="row">
         <div class="form-group col">
-          <label for="uname">Select Patient ID:</label>
-          <select class="form-select" formControlName="appointment_type">
-            <option value="1">P101</option>
-            <option value="2">P102</option>
-            <option value="3">P103</option>
+          <label for="">Patient ID:</label>
+          <select class="form-select" formControlName="p_id">
+            <option *ngFor="let patient of patientList" [value]="patient.id">
+              <!-- for another method -->
+              <!-- <option *ngFor="let dept of docByDepartment" [ngValue]="dept.id"> -->
+              {{ patient.id }}
+            </option>
           </select>
         </div>
 
         <div class="form-group col">
           <label for="uname">Patient Name:</label>
-          <input type="text" placeholder="Patient Name" class="form-control" disabled>
+          <input type="text" placeholder="Please Select Patient ID" class="form-control" disabled> 
+          <!-- follow patient list for this method -->
          
         </div>
-        </div>
+        </div><br>
 
 
       <div class="row">
         <div class="form-group col">
           <label for="uname">Cabin ID:</label>
-          <select class="form-select" formControlName="appointment_type">
-            <option value="1">C101</option>
-            <option value="2">C102</option>
-            <option value="3">C103</option>
+          <select class="form-select" formControlName="cabin_id">
+            <option *ngFor="let cabin of cabinList" [value]="cabin.id">
+              <!-- for another method -->
+              <!-- <option *ngFor="let dept of docByDepartment" [ngValue]="dept.id"> -->
+              {{ cabin.id }}
+            </option>
           </select>
         </div>
 
         <div class="form-group col">
-          <label for="uname">Cabin Type:</label>
-          <select class="form-select" formControlName="appointment_type">
-            <option value="1">ICU</option>
-            <option value="2">GENRAL</option>
-            <option value="3">AC ROOM</option>
-          </select>  
+          <label for="">Doctor ID:</label>
+          <select class="form-select" formControlName="doc_id">
+            <option *ngFor="let doc of docList" [value]="doc.id">
+              <!-- for another method -->
+              <!-- <option *ngFor="let dept of docByDepartment" [ngValue]="dept.id"> -->
+              {{ doc.first_name }} {{doc.last_name}}
+            </option>
+          </select>
         </div>
-      </div>
+      </div><br>
 
-
-      <div class="row">
-
-        <div class="form-group col">
-            <label for="uname">Refferal Doctor:</label>
-            <select class="form-select" formControlName="doc_id">
-              <option value="1">Khalek</option>
-              <option value="1">Malek</option>
-              <option value="1">Rashed</option>
-            </select>
-          </div>
-      </div>
 
 
 
       <div class="row">
         <div class="form-group col">
           <label for="uname">Allotment Date:</label>
-          <input type="date" class="form-control" formControlName="appointment_date">
+          <input type="date" class="form-control" formControlName="allotment_date">
          
         </div>
         <div class="form-group col">
           <label for="upass">Discharge Date:</label>
-          <input type="date" class="form-control" formControlName="appointment_date">
+          <input type="date" class="form-control" formControlName="discharge_date">
         </div>
       </div>
 
     
       <div class="d-flex justify-content-center">
-        <button type="submit" class="btn btn-outline-success float-right d-flex justify-content-center m-2" id="btnLogin">Create Allotment</button>
+        <button type="submit" class="btn btn-outline-info float-right d-flex justify-content-center m-2" id="btnLogin">Create Allotment</button>
         <button type="submit" class="btn btn-outline-info float-right d-flex justify-content-center m-2" id="btnLogin">Cabin List</button>
-    </div>
+    </div><br>
   
 </form>
   </div>
