--- a/src/app/adminboard/diagonosis/operation/operation.component.html
+++ b/src/app/adminboard/diagonosis/operation/operation.component.html
@@ -1,5 +1,4 @@
-
-  <nav aria-label="breadcrumb">
+<nav aria-label="breadcrumb">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a routerLink="/admin">Dashboard</a></li>
       <li class="breadcrumb-item active" aria-current="page">Operation</li>
@@ -15,44 +14,61 @@
         </div>
 
   
-        <form [formGroup]="cabinForm" class="form" role="form" autocomplete="off" id="formLogin" novalidate=""
+        <form [formGroup]="operationForm" class="form" role="form" autocomplete="off" id="formLogin" novalidate=""
           method="POST">
-
-          <div class="form-group">
-            <label for="">Cabin No:</label>
-            <input class="form-control" type="number" formControlName="cabin_no">
-          </div><br>
-
-
-          <div class="form-group">
-            <label for="">Cabin Type:</label>
-            <select class="form-select" formControlName="cabin_type">
+          <div class="form-group col">
+            <label for="">Patient ID:</label>
+            <select class="form-select" formControlName="p_id">
               <!-- <select class="form-select" formControlName="dept_id"  #aDept (change)="onSelect(aDept.value)"> -->
-              <option value="AC">AC</option>
-              <option value="General">General</option>
+              <option *ngFor="let patient of pList" [value]="patient.id">
+                {{ patient.id }}
+              </option>
             </select>
-          </div><br>
-
-
-          <div class="form-group">
-            <label for="">Floor:</label>
-            <select class="form-select" formControlName="floor">
-              <!-- <select class="form-select" formControlName="dept_id"  #aDept (change)="onSelect(aDept.value)"> -->
-              <option value="1st Floor">1st Floor</option>
-              <option value="2nd Floor">2nd Floor</option>
-              <option value="3rd Floor">3rd Floor</option>
-            </select>
-          </div><br>
-
-          <div class="form-group">
-            <label for="">Cabin Fare:</label>
-            <input class="form-control" type="number" formControlName="cabin_fare">
           </div>
+<br>
+
+
+<div class="form-group col">
+    <label for="">Doctor:</label>
+    <select class="form-select" formControlName="doc_id">
+      <!-- <select class="form-select" formControlName="dept_id"  #aDept (change)="onSelect(aDept.value)"> -->
+      <option *ngFor="let doctor of docList" [value]="doctor.id">
+        {{ doctor.first_name }} {{ doctor.last_name }}
+      </option>
+    </select>
+  </div>
+  <br>
+
+
+          <div class="form-group col">
+            <label for="">Operation Charge:</label>
+            <input
+              class="form-control"
+              type="number"
+              name=""
+              id=""
+              formControlName="operation_charge"
+            />
+          </div><br>
+
+
+          <div class="form-group col">
+            <label for="">Operation Date:</label>
+            <input
+              class="form-control"
+              type="date"
+              name=""
+              id=""
+              formControlName="operation_date"
+            />
+          </div>
+          
+          
           <br><br>
-  
+
           <div class="d-flex justify-content-center"><button type="submit"
-              class="btn btn btn-outline-info float-right d-flex justify-content-center" id="btnLogin" (click)="create()"
-              >Create Cabin</button></div>
+              class="btn btn-outline-success float-right d-flex justify-content-center" id="btnLogin"
+              (click)="create()">Create Operation</button></div>
   
         </form>
       </div>
@@ -62,11 +78,17 @@
 
 
 
+
+
+
+
+
+  
   
         <!-- Bootstrap or jquery Table -->
         <div class="table_wrapper col-8">
           <div class="bg-secondary mb-4">
-            <h6 class="bg-info p-3 text-white">All Cabin Lists:</h6>
+            <h6 class="bg-info p-3 text-white">All Operated Lists:</h6>
           </div>
 
           <mat-form-field>
@@ -84,22 +106,26 @@
                 <td mat-cell *matCellDef="let row"> {{row.id}} </td>
               </ng-container>
   
-              <ng-container matColumnDef="cabin_type">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Cabin Type:</th>
-                <td mat-cell *matCellDef="let row"> {{row.cabin_type}}</td>
+              <ng-container matColumnDef="p_id">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Patient ID:</th>
+                <td mat-cell *matCellDef="let row"> {{row.p_id}}</td>
               </ng-container>
   
-              <ng-container matColumnDef="floor">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Floor:</th>
-                <td mat-cell *matCellDef="let row"> {{row.floor}} </td>
+              <ng-container matColumnDef="doc_id">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Doctor ID:</th>
+                <td mat-cell *matCellDef="let row"> {{row.doc_id}} </td>
               </ng-container>
 
-              <ng-container matColumnDef="cabin_fare">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Cabin Fare:</th>
-                <td mat-cell *matCellDef="let row"> {{row.cabin_fare}} </td>
+              <ng-container matColumnDef="operation_charge">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Operation Charge:</th>
+                <td mat-cell *matCellDef="let row"> {{row.operation_charge}} </td>
               </ng-container>
 
-             
+              <ng-container matColumnDef="operation_date">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Operation Date:</th>
+                <td mat-cell *matCellDef="let row"> {{row.operation_date}} </td>
+              </ng-container>
+              
               <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
                 <td mat-cell *matCellDef="let row"> <button class="btn btn-info me-1 btn-sm"
