--- a/src/app/adminboard/payments/paymentslist/paymentslist.component.html
+++ b/src/app/adminboard/payments/paymentslist/paymentslist.component.html
@@ -96,10 +96,24 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Discount(%): </th>
         <td mat-cell  class="text-center" *matCellDef="let row"> {{row.discount}} </td>
       </ng-container>
+
       <ng-container matColumnDef="total_bill">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Total Bill: </th>
         <td mat-cell  class="text-center" *matCellDef="let row"> {{row.total_bill}} </td>
       </ng-container>
+
+
+      <ng-container matColumnDef="invoice">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Invoice: </th>
+        <td mat-cell  class="text-center" *matCellDef="let row">
+           <button class="btn btn-primary btn-sm" (click)="showInvoice(row,content)">View Invoice</button> </td>
+      </ng-container>
+
+      <ng-container matColumnDef="createdAt">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Payment Date:</th>
+        <td mat-cell  class="text-center" *matCellDef="let row"> {{row.createdAt}} </td>
+      </ng-container>
+ 
 
 
       <ng-container matColumnDef="action">
@@ -133,4 +147,228 @@
 
     
 
+
+
+
+    
+
+<!-- ==============================Modal For invoice====================================================== -->
+
+<ng-template #content let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title text-center" id="modal-basic-title">Your Bill Information:</h4>
+    <button type="button" class="btn-close" aria-label="Close" (click)="d('Cross click')"></button>
+  </div>
+  <div class="modal-body">
+    
+<div class="page-content container">
+  <div class="page-header text-blue-d2">
+    <h1 class="page-title text-secondary-d1">
+      Payment
+      <small class="page-info">
+        <i class="fa fa-angle-double-right text-80"></i>
+        ID: #{{paymentData.id}}
+      </small>
+    </h1>
+    <div class="page-tools">
+      <div class="action-buttons">
+        <a
+          class="btn bg-white btn-light mx-1px text-95"
+          href="#"
+          data-title="Print" (click)="printModal()"
+        >
+          <i class="mr-1 fa fa-print text-primary-m1 text-120 w-2"></i>
+          Print
+        </a>
+        <a
+          class="btn bg-white btn-light mx-1px text-95"
+          href="#"
+          data-title="PDF"
+        >
+          <i class="mr-1 fa fa-file-pdf-o text-danger-m1 text-120 w-2"></i>
+          Export
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="container px-0">
+    <div class="row mt-4">
+      <div class="col-12 col-lg-12">
+        <div class="row">
+          <div class="col-12">
+            <div class="text-center text-150">
+              <i class="fa fa-book fa-2x text-success-m2 mr-1"></i>
+              <span class="text-default-d3">IsDB-BISEW Hospital</span>
+            </div>
+          </div>
+        </div>
+
+        <hr class="row brc-default-l1 mx-n1 mb-4" />
+        <div class="row">
+          <div class="col-sm-6">
+            <div>
+              <span class="text-sm fw-bold text-grey-m2 align-middle">Billing To:</span><br>
+              <span class="text-600 text-110 text-blue align-middle"
+                >{{patientInfo.p_first_name}} {{patientInfo.p_last_name}}</span
+              >
+            </div>
+            <div class="text-grey-m2">
+              <div class="my-1">P-ID: #<span class="fw-bold">{{patientInfo.id}}</span></div>
+              <div class="my-1">Age: <span class="fw-bold">{{patientInfo.p_age}}</span></div>
+              <div class="my-1">Mobile: <span class="fw-bold">{{patientInfo.p_mobile}}</span></div>
+              <div class="my-1">{{patientInfo.p_address}}</div>
+            </div>
+          </div>
+
+          <div
+            class="text-95 col-sm-6 align-self-start d-sm-flex justify-content-end"
+          >
+            <hr class="d-sm-none" />
+            <div class="text-grey-m2">
+              <div class="mt-1 mb-2 text-secondary-m1 text-600 text-125">
+                Invoice
+              </div>
+              <div class="my-2">
+                <i class="fa fa-circle text-blue-m2 text-xs mr-1"></i>
+                <span class="text-600 text-90">ID:</span> #{{paymentData.id}}
+              </div>
+              <div class="my-2">
+                <i class="fa fa-circle text-blue-m2 text-xs mr-1"></i>
+                <span class="text-600 text-90">Issue Date: </span>{{paymentData.createdAt | date:'mediumDate'}}
+              </div>
+
+              <div class="my-2">
+                <i class="fa fa-circle text-blue-m2 text-xs mr-1"></i>
+                <span class="text-600 text-90">Issue Time: </span>{{paymentData.createdAt | date:'mediumTime'}}
+              </div>
+              <div class="my-2">
+                <i class="fa fa-circle text-blue-m2 text-xs mr-1"></i>
+                <span class="text-600 text-90">Status:</span>
+                <span class="px-25"> Paid</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="mt-4">
+
+         <div class="row text-600 text-white bgc-default-tp1 py-25">
+            <div class="d-none d-sm-block col-1">#</div>
+            <div class="col-9">Description</div>
+            <div class="col-2">Amount</div>
+          </div>
+          <div class="text-95 text-secondary-d3">
+            <div class="row mb-2 py-25">
+              <div class="d-none d-sm-block col-1">1</div>
+              <div class="col-9">Doctor Charge</div>
+              <div class="col-2 text-secondary-d2"> {{paymentData.doc_charge}}</div>
+            </div>
+            <div class="row mb-2 mb-sm-0 py-25 bgc-default-l4">
+              <div class="d-none d-sm-block col-1">2</div>
+              <div class="col-9">Diagonosis Charge</div>
+              <div class="col-2 text-secondary-d2">{{paymentData.test_charge}}</div>
+            </div>
+            <div class="row mb-2 mb-sm-0 py-25">
+              <div class="d-none d-sm-block col-1">3</div>
+              <div class="col-9 ">Medicine Charge</div>
+              <div class="col-2 text-secondary-d2">{{paymentData.med_charge}}</div>
+            </div>
+            <div class="row mb-2 mb-sm-0 py-25 bgc-default-l4">
+              <div class="d-none d-sm-block col-1">4</div>
+              <div class="col-9">Operation Charge</div>
+              <div class="col-2 text-secondary-d2">{{paymentData.ot_charge}}</div>
+            </div>
+
+            <div class="row mb-2 mb-sm-0 py-25">
+              <div class="d-none d-sm-block col-1">5</div>
+              <div class="col-9">Cabin Charge</div>
+              <div class="col-2 text-secondary-d2">{{paymentData.cabin_charge}}</div>
+            </div>
+
+            <div class="row mb-2 mb-sm-0 py-25 bgc-default-l4">
+              <div class="d-none d-sm-block col-1">6</div>
+              <div class="col-9">Ambulance Charge</div>
+              <div class="col-2 text-secondary-d2">{{paymentData.ambulance_charge}}</div>
+            </div>
+          </div>
+          <div class="row border-b-2 brc-default-l2"></div>
+          <div class="row mt-3">
+            <div class="col-12 col-sm-7 text-grey-d2 text-95 mt-2 mt-lg-0"> 
+              <!-- If you want to write dows anynotes regarding payment write here -->
+            </div>
+            <div
+              class="col-12 col-sm-5 text-grey text-90 order-first order-sm-last"
+            >
+
+              <div class="row my-2">
+                <div class="col-7 text-right">SubTotal</div>
+                <div class="col-5">
+                  <span class="text-120 text-secondary-d1">{{sum}}/=</span>
+                </div>
+              </div>
+              <div class="row my-2">
+                <div class="col-7 text-right">Discount Amount(%)</div>
+                <div class="col-5">
+                  <span class="text-110 text-secondary-d1">{{DiscountVal}}%</span>
+                </div>
+              </div>
+              <div class="row my-2 bgc-primary-l3">
+                <div class="col-7 text-right">Total Amount (Discounted)</div>
+                <div class="col-5">
+                  <span class="text-150 text-success-d3 opacity-2">{{discountSum}}/=</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <hr />
+          <!-- <div>
+            <span class="text-secondary-d1 text-105"
+              >Thank you for your business</span
+            >
+            <a
+              href="#"
+              class="btn btn-info btn-bold px-4 float-right mt-3 mt-lg-0"
+              >Pay Now</a
+            >
+          </div>  -->
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+  </div>
+  <!-- <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Save</button>
+  </div> -->
+</ng-template>
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!-- ==============================Modal====================================================== -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
