--- a/src/app/adminboard/cabin/cabincreate/cabincreate.component.html
+++ b/src/app/adminboard/cabin/cabincreate/cabincreate.component.html
@@ -99,11 +99,17 @@
                 <td mat-cell *matCellDef="let row"> {{row.cabin_fare}} </td>
               </ng-container>
 
+
+              <ng-container matColumnDef="patient_id">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Pateint ID:</th>
+                <td mat-cell *matCellDef="let row">dfgdfgdf </td>
+              </ng-container>
+
              
               <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
                 <td mat-cell *matCellDef="let row"> <button class="btn btn-info me-1 btn-sm"
-                    (click)="edit( row)">Edit</button>|
+                    (click)="edit(row , content)">Edit</button>|
                   <button class="btn btn-danger btn-sm ms-1" (click)="deleteByID(row.id)">Delete</button>
                 </td>
               </ng-container>
@@ -140,6 +146,64 @@
   
   
   
+<!-- ==============================Modal====================================================== -->
+
+<ng-template #content let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title text-center" id="modal-basic-title">Edit Doctor's Information:</h4>
+    <button type="button" class="btn-close" aria-label="Close" (click)="d('Cross click')"></button>
+  </div>
+  <div class="modal-body">
+
+    <h3 class="text-center bg-info mb-4 p-2">Update Doctor's Information</h3>
+    <form [formGroup]="cabinForm" class="form" role="form" autocomplete="off" id="formLogin" novalidate=""
+    method="POST">
+
+    <div class="form-group">
+      <label for="">Cabin No:</label>
+      <input class="form-control" type="number" formControlName="cabin_no">
+    </div><br>
+
+
+    <div class="form-group">
+      <label for="">Cabin Type:</label>
+      <select class="form-select" formControlName="cabin_type">
+        <!-- <select class="form-select" formControlName="dept_id"  #aDept (change)="onSelect(aDept.value)"> -->
+        <option value="AC">AC</option>
+        <option value="General">General</option>
+      </select>
+    </div><br>
+
+
+    <div class="form-group">
+      <label for="">Floor:</label>
+      <select class="form-select" formControlName="floor">
+        <!-- <select class="form-select" formControlName="dept_id"  #aDept (change)="onSelect(aDept.value)"> -->
+        <option value="1st Floor">1st Floor</option>
+        <option value="2nd Floor">2nd Floor</option>
+        <option value="3rd Floor">3rd Floor</option>
+      </select>
+    </div><br>
+
+    <div class="form-group">
+      <label for="">Cabin Fare:</label>
+      <input class="form-control" type="number" formControlName="cabin_fare">
+    </div>
+    <br><br>
+
+    <div class="d-flex justify-content-center"><button type="submit"
+        class="btn btn btn-outline-info float-right d-flex justify-content-center" id="btnLogin" (click)="create()"
+        >Create Cabin</button></div>
+
+  </form>
+
+
+  </div>
+  <!-- <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Save</button>
+  </div> -->
+</ng-template>
+
   
   
   
