--- a/src/app/adminboard/patient/patientlist/patientlist.component.html
+++ b/src/app/adminboard/patient/patientlist/patientlist.component.html
@@ -72,7 +72,12 @@
 
         <ng-container matColumnDef="p_platform">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Platform</th>
-          <td mat-cell class="text-center"  *matCellDef="let row"> {{row.p_platform}} </td>
+          <td mat-cell class="text-center"  *matCellDef="let row">{{row.p_platform}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="cabin_id">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Cabin ID</th>
+          <td mat-cell class="text-center"  *matCellDef="let row">{{getCabin(row)}}</td>
         </ng-container>
 
   
@@ -275,5 +280,5 @@
   </ng-template>
 
 
-  <h1>Total Data: {{totalRows}}</h1>
+  <!-- <h1>Total Data: {{totalRows}}</h1> -->
   
