"The night before exam"

--- a/src/app/adminboard/adminboard.component.html
+++ b/src/app/adminboard/adminboard.component.html
@@ -64,9 +64,9 @@
                         <mat-icon>apple</mat-icon><span>Patient Admission</span>
                     </a> -->
 
-                    <a mat-list-item routerLink="/admin/prescription">
+                    <!-- <a mat-list-item routerLink="/admin/prescription">
                         <mat-icon>apple</mat-icon><span>Prescriptions</span>
-                    </a>
+                    </a> -->
                     
                 </mat-nav-list>
             </mat-expansion-panel>
