--- a/src/app/adminboard/cabin/allcabinlist/allcabinlist.component.html
+++ b/src/app/adminboard/cabin/allcabinlist/allcabinlist.component.html
@@ -80,7 +80,10 @@
 
       <ng-container matColumnDef="cabin_status">
         <th mat-header-cell *matHeaderCellDef>Cabin Status:</th>
-        <td mat-cell  class="text-center" *matCellDef="let row"> {{row.cabin_status}} </td>
+        <td mat-cell  class="text-center" *matCellDef="let row"> 
+          <div [ngClass]="{'bg-danger': row.cabin_status === 'Engaged', 'bg-secondary': row.cabin_status === 'Released'}" class="text-white rounded"> {{row.cabin_status}}</div> 
+        
+           </td>
       </ng-container>
 
 
@@ -89,12 +92,10 @@
         <th mat-header-cell *matHeaderCellDef> Actions </th>
         <td mat-cell  class="text-center"  *matCellDef="let row">
           <div class="d-flex justify-content-center align-items-center">
-            <button class="btn btn-success btn-sm me-1"
-            >Edit</button><br>
+            <button class="btn btn-success btn-sm me-1" (click)="changeCabinStaus(row)"
+            >Discharge</button><br>
             <!-- <button class="btn btn-info btn-sm me-1" (click)="upTableVal(row)" 
             >Confirm</button><br> -->
-
-          <button class="btn btn-danger btn-sm">Delete</button>
           </div>
         </td>
       </ng-container>
