--- a/src/app/adminboard/diagonosis/pathology/pathology.component.html
+++ b/src/app/adminboard/diagonosis/pathology/pathology.component.html
@@ -49,7 +49,7 @@
 
           <div class="form-group col">
             <label for="">Pathology Type:</label>
-            <select class="form-select" formControlName="doc_id">
+            <select class="form-select" formControlName="pathology_type_id">
               <!-- <select class="form-select" formControlName="dept_id"  #aDept (change)="onSelect(aDept.value)"> -->
               <option
                 *ngFor="let pathologyType of pathologyTypeList"
@@ -161,11 +161,11 @@
         <td mat-cell *matCellDef="let row">{{ row.pathology_type_id }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="pathology_date">
+      <ng-container matColumnDef="createdAt">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>
           Pathology Date:
         </th>
-        <td mat-cell *matCellDef="let row">{{ row.pathology_date }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.createdAt | date:'mediumDate'}}</td>
       </ng-container>
       <ng-container matColumnDef="pathology_price">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Price:</th>
